Docker compose works, proxy.conf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,30 @@ services:
   accessible-course-material:
     build:
       context: ../accessible-course-material
-      dockerfile: ../accessible-course-material/docker/Dockerfile
+      dockerfile: docker/Dockerfile
     ports:
       - '4003:8000'
   
   # Visualizing Concepts
   visualizing-concepts:
+    build:
+      context: ../visualizing-concepts
+      dockerfile: docker/Dockerfile
+    ports:
+      - '4004:8000'
 
   # Course Exercises
   course-exercises-web-server:
     build:
-      context: ./
-      dockerfile: web_server/Dockerfile
-    ports: '4000:4000'
+      context: ../course-exercises/web_server
+    ports:
+      - '4000:4000'
 
   course-exercises-data-server:
     build:
-      context: data_server/
-      dockerfile: Dockerfile
-    ports: '4001:4001'
+      context: ../course-exercises/data_server
+    ports:
+      - '4001:4001'
 
   course-exercises-database:
     image: mongo
@@ -39,13 +44,16 @@ services:
   nginx-ssl-proxy:
     build:
       context: nginx-ssl/
-      dockerfile: nginx-ssl/Dockerfile
     restart: always
     environment:
-      SERVERNAME: discretemath.net
-      EXTRANAMES: discretemath.net
+      SERVERNAME: discretemath.ca
+      EXTRANAMES: discretemath.ca
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - "/etc/letsencrypt"
+
+# Volume for MongoDB
+volumes:
+  data-volume:
